update services